# SciTaskMgr

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: config.toml  dummy_project.rs  task_config.toml  task_group_config.toml
examples/dummy_project/: dummy_task.rs  dummy_task_group.rs  task_configs.toml  task_group_config.toml
src/: lib.rs  main.rs  runner.rs
src/config_io/: error.rs  load.rs  mod.rs  types.rs  validate.rs
src/progress/: event.rs  handle.rs  mod.rs  store.rs
src/task/: build.rs  context.rs  mod.rs  task_trait.rs
src/task_group/: group.rs  mod.rs
tests/: config_io.rs  task.rs  task_group.rs  trajectory_submission.rs
