[package]
name = "sci_task_mgr"
version = "0.0.1"
edition = "2024"

description = "A Universal Scientific Calculation Task Manager"
license = "MIT"

readme = "../README.md"
repository = "https://github.com/dingyisun0101/SciTaskIO"
homepage = "https://github.com/dingyisun0101/SciTaskIO"
documentation = "https://github.com/dingyisun0101/SciTaskIO"
keywords = ["physics", "simulation", "math", "tensor", "scientific"]
categories = ["science"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
